changed submit to input and add style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form id="taskForm">
             <input type="text" id="taskName" class="toDoInput" placeholder="Enter Task Name">
             <input type="text" id="taskDesc" class="toDoInput" placeholder="Enter Task">
-            <button id="submitBtn">Submit</button>
+            <input type="submit" value="Submit">
         </form>
     </header>
 
